--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -117,7 +117,7 @@
 
     <div class="card text-center">
         <h2 class="mb-4">Login</h2>
-        <form action="/login" method="POST">
+        <form action="/user/login" method="POST">
             <input type="email" name="email" class="form-control" placeholder="Email" required>
             <input type="password" name="password" class="form-control" placeholder="Password" required>
             <button type="submit" class="btn btn-gradient w-100">Login</button>
