--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -117,7 +117,7 @@
 
     <div class="card text-center">
         <h2 class="mb-4">Sign Up</h2>
-        <form action="/signup" method="POST">
+        <form action="/user/signup" method="POST">
             <input type="text" name="userName" class="form-control" placeholder="Name" required>
             <input type="email" name="email" class="form-control" placeholder="Email" required>
             <input type="password" name="password" class="form-control" placeholder="Password" required>
